# ComfyUI-Transformers-Pipeline

./: .gitignore  LICENSE  README.md  __init__.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example_workflows/: Simple.json
nodes/: batch_processor_TPL.py  batch_processor_tpl.py  caption_export_TPL.py  caption_export_tpl.py  caption_generator_TPL.py  caption_generator_tpl.py  florence2_node_TPL.py  florence2_node_tpl.py  image_loader_TPL.py  image_loader_tpl.py  model_loader_TPL.py  model_loader_tpl.py  preset_model_list_TPL.py  preset_model_list_tpl.py  task_list_TPL.py  task_list_tpl.py
util_nodes/: debug_model_node_tpl.py  debug_node_tpl.py  exif_metadata_extractor_tpl.py
